fix broken layout in mobile

--- a/src/styles/collapsible.scss
+++ b/src/styles/collapsible.scss
@@ -20,4 +20,7 @@
     .page-content .container {
         width:100%;
     }
+    .title-description {
+        display:none;
+    }
 }
