--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2,11 +2,12 @@ html, body {
 	margin: 0;
     padding: 0;
     width:100%;
-    height: 100&
+    height: 100%;
 }
 
 .page-content {
     width:100%;
 	height:100%;
     display:flex;
+    overflow-x:hidden;
 }
